update file index and js

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
       <nav>
         <ul>
           <li>
-            <a href="#main">About</a>
+            <a href="#main">Home</a>
           </li>
           <li>
-            <a href="#about">about</a>
+            <a href="#about">About</a>
             </li>
           <li>
-            <a href="#skills">skill</a>
+            <a href="#skills">Skill</a>
           </li>
           <li>
-            <a href="#project">project</a>
+            <a href="#project">Project</a>
           </li>
           <li>
-            <a href="#contact">contact</a>
+            <a href="#contact">Contact</a>
           </li>
         </ul>
       </nav>
