--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   <label for="message">Message</label>
   <textarea id="message" name="message" rows="5" placeholder="Write your message..." required></textarea>
 
-  <button type="submit">Send Message</button>
+  <button type="submit" class="btn">Send Message</button>
 </form>
     </section>
   </main>
@@ -179,5 +179,6 @@
   <script src="src/javascript/skills.js"></script>
   <script src="src/javascript/project.js"></script>
   <script src="src/javascript/scroll.js"></script>
+  <script src="src/javascript/remove_input.js.js"></script>
 </body>
 </html>
