--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <span>developer</span>
       </h1>
       <p>Hello, my name is Mohammed. I work as a website programmer. I have experience in the web field and I seek to develop it.</p>
-      <a href="" download class="btn">
+      <a href="public/CV/cv-mohammed.pdf" download class="btn">
         CV Download</a>
       </div>
       <div class="Initial">
@@ -101,7 +101,7 @@
         <h3><span>About</span> me!</h3>
         <p>🎓 I'm a high-school student passionate about Web Development and exploring C++ programming.
           💻 Currently, I’m focusing on improving my skills, building projects, and maintaining my Portfolio.</p>
-        <a href="#" download class="btn2">CV Download</a>
+        <a href="public/CV/cv-mohammed.pdf" download class="btn2">CV Download</a>
       </div>
     </section>
     
