--- a/index.html
+++ b/index.html
@@ -16,15 +16,7 @@
   <!-- CSS -->
   <link rel="stylesheet" href="src/css/variable.css" />
   <link rel="stylesheet" href="src/css/main.css" />
-  <link rel="stylesheet" href="src/css/navbar.css" />
-  <link rel="stylesheet" href="src/css/header.css" />
-  <link rel="stylesheet" href="src/css/skill.css" />
-  <link rel="stylesheet" href="src/css/about.css" />
-  <link rel="stylesheet" href="src/css/project.css" />
-  <link rel="stylesheet" href="src/css/form.css" />
-  <link rel="stylesheet" href="src/css/footer.css" />
-  <link rel="stylesheet" href="src/css/buttontop.css" />
-  <link rel="stylesheet" href="src/css/responsive/computer.css" />
+  <link rel="stylesheet" href="src/css/responsive.css" />
 </head>
 <body>
 
