--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="src/css/responsive.css" />
 </head>
 <body>
-
+  <div class="blur"></div>
   <!-- Header -->
   <header>
     <div class="container">
@@ -86,25 +86,22 @@
     <!-- About -->
     <section id="about">
       <div class="about-img">
-        <img src="public/img/iconwebsite.png" alt="About me image" width="250" loading="lazy" />
       </div>
       <div class="about-title">
         <h2><span>About</span> Me</h2>
         <p>🎓 I'm a high-school student passionate about Web Development and exploring C++ programming.  
         💻 Currently, I’m focusing on improving my skills, building projects, and maintaining my Portfolio.</p>
-        <a href="public/CV/cv-mohammed.pdf" download class="btn2">Download CV</a>
+        <a href="public/CV/cv-mohammed.pdf" download class="btn">Download CV</a>
       </div>
     </section>
 
     <!-- Skills -->
     <section id="skills">
-      <h2>Skills</h2>
       <div id="all_skills"></div>
     </section>
 
     <!-- Projects -->
     <section id="project">
-      <h2>Projects</h2>
       <div class="projects"></div>
     </section>
 
@@ -138,7 +135,6 @@
         <p>Indeed, those who have believed and done righteous deeds - never will We allow to be lost the reward of any who did well in deeds.</p>
       </div>
     </div>
-    <hr class="footer-line" />
     <div>
       <a href="#">All rights reserved ©2025</a>
     </div>
